# document

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  MONGO.md  Makefile  README.md  docker-compose.yml  install.sh
.circleci/: config.yml
documentation/diagrams/: tool.txt
documentation/diagrams/activity/document/: create.drawio
documentation/diagrams/activity/user/: login.drawio  register.drawio
documentation/diagrams/class/: class.drawio
documentation/diagrams/relational/: relational.mwb  relational.sql  relational.txt
documentation/diagrams/sequence/document/: create.drawio
documentation/diagrams/sequence/user/: login.drawio  register.drawio
source/: headers.hpp  main.cpp
source/classes/connection/: connection.cpp  connection.hpp
source/classes/crud/: crud.cpp  crud.hpp
source/classes/document/: document.cpp  document.hpp
source/classes/document_file/: document_file.cpp  document_file.hpp
source/classes/user/: user.cpp  user.hpp
source/qt/: Proto-Buffer-Qt.pro  main.cpp  mainwindow.ui
source/settings/: settings.cpp  settings.hpp
